# CourseWork_2

./: .gitignore  README.md  pyproject.toml
data/: vacancies.csv  vacancies.xlsx
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_api_py.html  z_145eef247bfb46b6_data_models_py.html  z_145eef247bfb46b6_interaction_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_storage_py.html
src/: api.py  data_models.py  interaction.py  main.py  storage.py
src/data/: vacancies.json
tests/: test_api.py  test_data_models.py  test_storage.py
