[project]
name = "coursework-2"
version = "0.1.0"
description = ""
authors = [
    {name = "AleksChek26",email = "check1984@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests-mock (>=1.12.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
requests = "^2.32.5"
flake8 = "^7.3.0"
mypy = "^1.18.1"
black = "^25.1.0"
isort = "^6.0.1"
pytest-cov = "^7.0.0"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      /.git
  )/
 )
 '''

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'